# torchami

./: .gitignore  .readthedocs.yaml  ACKNOWLEDGE.TXT  CMakeLists.txt  INSTALL.md  README.md  compile.sh  prep_compile.sh
.github/workflows/: cmake.yml
doc/: CMakeLists.txt  Doxyfile.in  Referencing.rst  conf.py  docs.rst  examples.rst  index.rst  install.rst  requirements.txt  support.rst
examples/: CMakeLists.txt  compile.sh
examples/ggm_examples/: o2_g0_n0.graph  o4_g0_n0.graph  o6_g0_n0.graph
examples/integrator_example/: CMakeLists.txt
examples/integrator_example/src/: graph_util.cpp  integration.hpp  integrator_eg.cpp  main.cpp
examples/src/: examples.cpp  examples.hpp  pt_main.cpp
pytami_examples/: example_main.py  examples.py  external.py  flat_integ.py  graph_example.py  graph_util.py  momenta_integrand.py  momentum_main.py  scaling.py
pytami_examples/helperScripts/: examples.py  external.py  flat_integ.py  getDevice.py  graph_util.py
pytami_examples/renorm_PT/: RPT_integrand.py  read.py  rpt_example.py  rpt_plain.py  rpt_together.py
pytami_examples/renorm_PT/R0_ct_graphs/: CT_o2g0n0c0.graph  CT_o2g0n0c1.graph  CT_o2g0n0c2.graph
pytami_examples/renorm_PT/R0_graphs/: R0_o2g0n0.graph  R0_o3g0n0.graph  R0_o3g0n1.graph  R0_o4g0n0.graph  R0_o4g0n1.graph  R0_o4g0n2.graph  R0_o4g1n0.graph  R0_o4g1n1.graph  R0_o4g1n2.graph  R0_o4g2n0.graph  R0_o4g2n1.graph  R0_o4g2n2.graph  R0_o4g3n0.graph  R0_o4g3n1.graph  R0_o4g3n2.graph
pytami_examples/scaling_plots/: 4070_cpp_linearfits.agr  4070_cpp_linearfits.eps  linear_scaling_lt_3e05.agr  linear_scaling_lt_3e05.eps  scaling_log.agr  scaling_log.eps  scaling_plots.agr
pytami_src/: CMakeLists.txt  pytami.cpp  pytami_wrapper.cpp
src/: ami_base.hpp  ft.cpp  ft.hpp  pt_ami.hpp  pt_ami_construct.cpp  pt_ami_evaluate.cpp  tami_base.hpp  tami_construct.cpp  tami_evaluate.cpp  tami_ft.cpp  tami_ft.hpp  tami_python.cpp  tami_terms.cpp
src/pytami_src/: CMakeLists.txt  pytami.cpp  pytami_wrapper.cpp
src/tami_base_src/: CMakeLists.txt  tami_base.hpp  tami_construct.cpp  tami_evaluate.cpp  tami_ft.cpp  tami_python.cpp  tami_terms.cpp
src/tami_graph_src/: CMakeLists.txt  main.cpp  tami_graph.hpp  tamigraph_constructs.cpp  tamigraph_helpers.cpp  tamigraph_interface.cpp  tamigraph_labelling.cpp
test/: CMakeLists.txt  bu.cpp  construct_tests.cpp  fermi_bose.cpp  hello_test.cpp  helper_functions.cpp  num_test.cpp
